--- a/API/Web.config
+++ b/API/Web.config
@@ -66,6 +66,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DBase" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=API.DBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBase" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=BlaBlaBla;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
